tests/ui/unstable-feature_bound/unstable-feature-bound-two-error.stderr
error: unstable feature `feat_bar` is used without being enabled.
  --> $DIR/unstable-feature-bound-two-error.rs:9:5
   |
LL |     Bar::foo();
   |     ^^^
   |
   = help: The feature can be enabled through #[unstable_feature_bound(feat_bar)] in std/core, or with #[feature(feat_bar)] outside of std/core.
   = note: required for `Bar` to implement `Foo`

error: aborting due to 1 previous error

